refactor(security): amélioration de la configuration CORS et Swagger - Suppression config redondante, CORS dynamique, désactivation même origine, nettoyage config, Swagger UI avec JWT